Make sure Konqueror won't crash even when the locationbar and hence the input combox is removed.

BUG: 172692
FIXED-IN: 4.8.1
REVIEW: 103663
(cherry picked from commit b21b16103a643d0a1b4cd3c9711774d8908d240c)